--- a/templates/admin/datatable/tree/index.html.twig
+++ b/templates/admin/datatable/tree/index.html.twig
@@ -1,6 +1,6 @@
-{% extends "@UmbrellaAdmin/layout.html.twig" %}
+{% extends "admin/datatable/layout.html.twig" %}
 
-{% block content %}
+{% block table_section %}
     <div class="card">
         <div class="card-body pb-0">
             <h4 class="card-title">Tree example</h4>
@@ -13,6 +13,19 @@
         </div>
         <div class="card-datatable pt-0">
             {{ render_table(table) }}
+        </div>
+    </div>
+{% endblock %}
+
+{% block code_section %}
+    <div class="card">
+        <div class="card-body">
+            <div class="mb-3">
+                <a href="{{ git_url('src/Controller/Admin/DataTableTreeController.php') }}" target="_blank"><i class="mdi mdi-github"></i> Symfony Controller</a>
+            </div>
+            <div>
+                <a href="{{ git_url('src/DataTable/SpaceMissionClassificationTableType.php') }}" target="_blank"><i class="mdi mdi-github"></i> DataTableType</a>
+            </div>
         </div>
     </div>
 {% endblock %}
