Bundle best practice : replace route annotation by php config

--- a/templates/admin/notification/index.html.twig
+++ b/templates/admin/notification/index.html.twig
@@ -14,6 +14,9 @@
                     <p>Customize generated code as you want, then enable notification on config:</p>
                     <hl-code class="language-yaml">{{ source('admin/notification/_config.txt') }}</hl-code>
 
+                    <p>Enable route:</p>
+                    <hl-code class="language-yaml">{{ source('admin/notification/_routes.txt') }}</hl-code>
+
                     <p>Finally, create your notification :</p>
                     <hl-code class="language-php">{{ source('admin/notification/_create_notification.txt') }}</hl-code>
                 </div>
