update to last umbrella version / sf 6.4

--- a/assets/admin/plugins/highlightCode.scss
+++ b/assets/admin/plugins/highlightCode.scss
@@ -1,4 +1,4 @@
-@import "~highlight.js/scss/atom-one-dark-reasonable";
+@use "~highlight.js/scss/atom-one-dark-reasonable";
 
 hl-code {
   display: block;
