--- a/templates/datatable/tree/index.html.twig
+++ b/templates/datatable/tree/index.html.twig
@@ -6,8 +6,8 @@
             <h4 class="card-title">Tree example</h4>
             <p class="text-muted font-14">
                 This is a DataTable !<br>
-                To obtain this result, use <code>tree = true</code> option to active <code>jquery-treetable</code> plugin on first column.<br>
-                In this example, i use <code>NestedEntityAdapterType</code> working with Gedmo/Tree Entity (Entity must implements <code>NestedTreeEntityInterface</code>).
+                To obtain this result, use <code>tree = true</code> option to active Tree plugin on first column.<br>
+                In this example, i use <code>NestedEntityAdapterType</code> working with Gedmo/Tree Entity.
                 Whole data are loaded with one query but there is limitations : no pagination, no sort.
             </p>
         </div>
