--- a/assets/admin/main.scss
+++ b/assets/admin/main.scss
@@ -1,3 +1,17 @@
+@use "~highlight.js/scss/atom-one-dark-reasonable";
+
+hl-code {
+  display: block;
+  overflow-x: auto;
+  padding: 1em;
+  white-space: pre;
+  margin-bottom: 1rem;
+
+  &.scroll {
+    max-height: 420px;
+  }
+}
+
 .content-bar {
   position: sticky;
   top: calc(65px + 1rem); // topbar-height
